fix: remove scrollbar color customization for MapFeatureExplorer

--- a/src/features/projectsV2/ProjectsMap/MapFeatureExplorer/MapFeatureExplorer.module.scss
+++ b/src/features/projectsV2/ProjectsMap/MapFeatureExplorer/MapFeatureExplorer.module.scss
@@ -62,7 +62,6 @@
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
-  scrollbar-color: $primaryColorNew #fff;
 
   &::-webkit-scrollbar {
     width: 8px;
